# rbdb

./: CHANGELOG.md  README.md  rbdb.cabal  stack.yaml
lib/: Encoding.hs  EpisodeEntry.hs  GPodderSort.hs  RockboxDB.hs
lib/RockboxDB/: Entry.hs  IndexEntry.hs  Version.hs
lib/RockboxDB/TagFile/: Filename.hs
src/: Config.hs  Main.hs  Output.hs  RockboxDB.hs
src/RockboxDB/: Entry.hs  IndexEntry.hs  Prelude.hs
src/RockboxDB/IndexEntry/: Flags.hs
src/RockboxDB/TagFile/: Filename.hs
test/: EncodingSpec.hs  EpisodeEntrySpec.hs  GPodderSortSpec.hs
