cabal-version:       3.0
name:                rbdb
version:             0.1.3
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rbdb#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

common common-options
  build-depends:
      base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:
      BangPatterns
    , BinaryLiterals
    , DeriveGeneric
    , DerivingStrategies
    , GeneralizedNewtypeDeriving
    , ImportQualifiedPost
    , MultiWayIf
    , NamedFieldPuns
    , NumericUnderscores
    , OverloadedStrings
    , ScopedTypeVariables
    , TypeApplications
  -- most of the list is copied from summoner
  -- https://github.com/kowainik/summoner/blob/main/summoner-cli/examples/stack-full/stack-full.cabal
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wmissing-deriving-strategies
                       -Wunused-packages
                       -Werror=empty-enumerations
                       -Werror=missing-methods
                       -Werror=missing-fields
                       -Werror=incomplete-patterns
                       -Werror=incomplete-record-updates
                       -Werror=incomplete-uni-patterns
                       -Werror=missing-home-modules

library
  import:              common-options
  hs-source-dirs:      lib
  exposed-modules:
      Encoding
    , GPodderSort
    , RockboxDB
    , RockboxDB.Entry
    , RockboxDB.IndexEntry
    , RockboxDB.IndexEntry.Flags
    , RockboxDB.Prelude
    , RockboxDB.TagFile.Filename
  build-depends:
      bytestring
    , containers
    , directory
    , filepath
    , megaparsec
    , text
    , time

test-suite unit-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
      EncodingSpec
    , GPodderSortSpec
  build-depends:
      hspec
    , rbdb
    , text

executable rbdb
  import:              common-options
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Config
    , Output
    , Paths_rbdb
  build-depends:
      rbdb
    , ansi-terminal
    , containers
    , filepath
    , mtl
    , optparse-applicative
    , text
